# debian-scripts

./: OpenWRT_Pack_Installation.sh  README.md  backup.sh  cmd_template.sh  connecthost.sh  cript based on dialog  delfiles.sh  index-create.sh  kvmstart.sh  kvmstart_ui.sh  manjaro_initial_configuration.sh  myfun.sh  netch_settings.json  tarsh.sh  template.sh  ui_template.sh  updatesystem.sh
AutoCompile/: README.md  auto_compile.sh
AutoCompile/test/: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
AutoCompile/test/autom4te.cache/: output.0  output.2  requests  traces.0  traces.2  traces.3
AutoCompile/test/src/: Makefile  Makefile.in  hello
AutoCompile/test/src/.deps/: main.Po
DownloadAndSync/: amule.service
KVM/: kvmstart.sh  kvmstart_ui.sh  vboxInitArch.sh
MySQL/: init_mysql.sh
MySQLconfig/: mysql_init.sh
OTHER/: ConfigandSetupofLXDEandVNC.sh  LesencryptHttps.sh  NetworkManager.profile  ProjectsOnGithub.sh  backup.sh  bbr.sh  bigfile_backup.sh  book-searcher.service  chroot_cmd.sh  chroot_ui.sh  connecthost.sh  convertZipEncode.sh  dd_progress.sh  debian_chroot.sh  debootstrap_schroot_conf.sh  delfiles.sh  dnsmasq.conf  en_vnc.sh  guiapp_run_in_cmd.sh  img_mount.sh  index-create.sh  index-html.sh  initComputer.service  ipfs.service  kvmstart.sh  loadNetFS.sh  loadNetFS_ui.sh  manjaro_initial_configuration.sh  modem_reboot.sh  ntpsync.sh  pi_env_configuration.sh  pxec.sh  server_backup_recovery.sh  shutdownOnTime.sh  smb.conf  tarsh.sh  tasks_crontab.txt  updatesystem.sh  upgrade_nvidia_card.sh  youtebedlguide.md  (+1 more)
(+260 files in other folders)
